# opencl-book-samplesBundle

./: .autotools  .cproject  .project  CMakeLists.txt  OpenCL Programming Guide (英文版).txt  OpenCL编程指南.pdf.txt  run.sh
images/: 23.jfif
src/: CMakeLists.txt
src/Chapter_11/D3Dinterop/: CMakeLists.txt  D3Dinterop.cpp
src/Chapter_12/Sinewave/: CMakeLists.txt  sinewave.cpp
src/Chapter_14/histogram/: CMakeLists.txt
src/Chapter_19/oclFlow/: CMakeLists.txt
src/Chapter_2/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
src/Chapter_3/OpenCLConvolution/: CMakeLists.txt
src/Chapter_6/HelloBinaryWorld/: CMakeLists.txt
src/Chapter_7/SimpleBufferSubBuffer/: CMakeLists.txt  simple.cpp
src/Chapter_8/Ch8Rgb2Rgba/: CMakeLists.txt  ImageFilter2Dcv.cl  ImageFilter2Dcv.cpp
src/Chapter_8/Ch8RgbCopyRgb/: CMakeLists.txt  ImageFilter2Dcv.cl  ImageFilter2Dcv.cpp
src/Chapter_8/ImageFilter2D/: CMakeLists.txt  ImageFilter2D.cl  ImageFilter2D.cpp
src/Chapter_8/ImageFilter2DCVRgb/: CMakeLists.txt  ImageFilter2Dcv.cl  ImageFilter2Dcv.cpp
src/Chapter_8/ImageFilter2DCVRgba/: CMakeLists.txt  ImageFilter2Dcv.cpp
src/Chapter_8/ImageFilter2DCVRgbaCopy/: CMakeLists.txt
src/Chapter_8/ImageFilter2DCVRgbaLaplace/: CMakeLists.txt  ImageFilter2Dcv.cl
src/Chapter_8/ImageFilter2DCVRgbaLaplaceX/: CMakeLists.txt  ImageFilter2Dcv.cl  ImageFilter2Dcv.cpp
src/Chapter_8/ImageFilter2DCVRgbaMid/: CMakeLists.txt  ImageFilter2Dcv.cl
src/Chapter_8/ImageFilter2DCVRgbaReverse/: CMakeLists.txt  ImageFilter2Dcv.cl  ImageFilter2Dcv.cpp
src/Chapter_8/ImageFilter2DCVRgbaSobel/: CMakeLists.txt  ImageFilter2Dcv.cl  ImageFilter2Dcv.cpp
src/Chapter_8/ImageFilter2DCvGrey/: CMakeLists.txt  ImageFilter2Dcv.cpp
src/Chapter_8/ImageFilter2DCvGreyb-------/: CMakeLists.txt  ImageFilter2Dcv.cpp
src/Chapter_8/ImageFilter2DFreeImageRGBA/: CMakeLists.txt  ImageFilter2D.cpp
src/Chapter_8/ImageFilter2Dcv/: CMakeLists.txt  ImageFilter2Dcv.cpp
